--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "phpoffice/phpspreadsheet": "^5.1",
         "spatie/laravel-activitylog": "^3.17",
         "tightenco/ziggy": "^1.4",
         "unisharp/laravel-filemanager": "~1.8",
